kubernetes/system/networking/gateways.yaml
---
# To test this gateway modify the /etc/hosts and set the *.ninebasetwo.net to the LB IP of the external-gateway
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: external-gateway
  namespace: networking
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
spec:
  gatewayClassName: cilium
  listeners:
  - name: external-gateway-http
    port: 80
    protocol: HTTP
    hostname: "*.ninebasetwo.net"
    allowedRoutes:
      namespaces:
        from: All
  - name: external-gateway-https
    hostname: "*.ninebasetwo.net"
    port: 443
    protocol: HTTPS
    allowedRoutes:
      namespaces:
        from: All
    tls: 
      mode: Terminate 
      certificateRefs:
        - name: gateway-tls 
          kind: Secret  
          group: core 

---
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: internal-gateway
  namespace: networking
spec:
  gatewayClassName: cilium
  listeners:
  - name: internal-gateway-http
    port: 80
    protocol: HTTP
    allowedRoutes:
      namespaces:
        from: All
